--- a/BLL/Properties/Resources.resx
+++ b/BLL/Properties/Resources.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConnectionString" xml:space="preserve">
-    <value>Data Source=193.39.13.193;Persist Security Info=True;User ID=sa;Password=96kEHTPp2o0206;Initial Catalog=InvMe;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;</value>
-  </data>
-  <data name="GlobalPassword" xml:space="preserve">
-    <value>96kEHTPp2o0206</value>
+  <data name="WebApiURL" xml:space="preserve">
+    <value>http://193.39.13.210/api/InvMe/</value>
   </data>
 </root>
